--- a/style.css
+++ b/style.css
@@ -26,17 +26,34 @@ body {
         position: relative;
     }
 
-h1 {
+    h1 {
     font-size: 50px;
     text-transform: uppercase;
-    letter-spacing: 3px;
-}    
+    letter-spacing: 4px;
+    }       
 
-h2 {
+    h2 {
     text-transform: uppercase;
-    letter-spacing: 3px;
-}
+    letter-spacing: 4px;
+    }
 
-.social-media {
+    .social-media {
+        margin-top: 1rem;
+        display: flex;
+    }
 
-}
+    .social-media a {
+        text-decoration: none;
+        color: #1e1e2a;
+        padding: 1rem 4rem;
+        border: 1px solid #1e1e2a;
+        min-width: 4rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: .5s ease-in-out;
+    }
+
+    a:hover {
+        background-color: #ffffff;
+    }
