--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    color: #1e1e2a;
+    color: black;
 }
 
     /* Header */
@@ -13,13 +13,13 @@ body {
         height: 100vh;
         width: 100vw;
         background-color: #16ADBF;
-        background-image: url(./img/Perfil\ 1.png);
+        background-image: url(./img/foto.png);
         background-repeat: no-repeat;
         background-position: right;
-        background-size: contain;
+        background-size: 50% 50%;
         display: flex;  
         flex-direction: column;
-        justify-content: center;
+        justify-content:center;
         align-items: flex-start;
         box-sizing: border-box;
         padding: 0 112px;
@@ -119,5 +119,35 @@ body {
         border-radius: 50%;
         box-shadow: 0px 0px 0px 0px #ffffff;
         z-index: -1;
-        transition: 400ms ease-in-out;
+        transition: 400ms ease-in-out 0s;
     }
+
+    .menu-items {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 2;
+        opacity: 0;
+        visibility: hidden;
+        transition: 400ms ease-in-out 0s;
+    }
+
+    .menu-items ul {
+        list-style-type: none;
+    }
+
+    .menu-items ul li a {
+        margin: 10px 0;
+        color: #1e1e2a;
+        text-decoration: none;
+        text-transform: uppercase;
+        letter-spacing: 4px;
+        font-size: 40px;
+    }
+
+    /* 18 min */
