--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ a:hover {
 
 .menu-items ul li a {
     margin: 10px 0;
-    color: #1e1e2a;
+    color: black;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -179,7 +179,7 @@ a:hover {
 
 }
 
-#toggle:checked .menu-items {
+#toggle:checked ~ .menu-items {
     visibility: visible;
     opacity: 1;
 }
@@ -278,4 +278,16 @@ a:hover {
     opacity: 1;
     visibility: visible;
     font-size: 14px;
+}
+
+/* Footer */
+
+.footer {
+    width: 100%;
+    height: 100px;
+    background-color: #A9A9A9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
 }
